[package]
name = "cifarburn"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.17.0", features = ["train", "vision", "cuda"] }
burn-cuda = "0.17.0"
burn-dataset = { version = "0.17.0", features = ["audio", "vision"] }
dirs = "6.0.0"

# burn-tch = "0.17.0"
# torch-sys = "0.20.0"
# tch = "0.20.0"

# Serialization
log = { version = "0.4.27" }
serde = { version = "1.0.219", features = ["std", "derive"] }
